--- a/examples/gke/Dockerfile
+++ b/examples/gke/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright 2018 The Kubernetes Authors. All rights reserved.
+# Copyright 2018 The Helm Authors. All rights reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gcr.io/kubernetes-charts-ci/chart-testing:v1.0.1
+FROM gcr.io/kubernetes-charts-ci/chart-testing:v1.0.2
 
 ENV PATH /google-cloud-sdk/bin:$PATH
 ARG CLOUD_SDK_VERSION=200.0.0
