--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,20 +30,19 @@ dockers:
   - goos: linux
     goarch: amd64
     binary: ct
-    image: quay.io/helmpack/chart-testing
     skip_push: false
     dockerfile: Dockerfile
-    tag_templates:
-      - "{{ .Tag }}"
-      - latest
+    image_templates:
+      - quay.io/helmpack/chart-testing:{{ .Tag }}
+      - quay.io/helmpack/chart-testing:latest
     build_flag_templates:
-      - "--build-arg=dist_dir="
-      - "--label=org.label-schema.schema-version=1.0"
-      - "--label=org.label-schema.version={{ .Version }}"
-      - "--label=org.label-schema.name={{ .ProjectName }}"
-      - "--label=org.label-schema.build-date={{ .Date }}"
-      - "--label=org.label-schema.description='ct - The chart testing tool'"
-      - "--label=org.label-schema.vendor=Helm"
+      - --build-arg=dist_dir=
+      - --label=org.label-schema.schema-version=1.0
+      - --label=org.label-schema.version={{ .Version }}
+      - --label=org.label-schema.name={{ .ProjectName }}
+      - --label=org.label-schema.build-date={{ .Date }}
+      - --label=org.label-schema.description='ct - The chart testing tool'
+      - --label=org.label-schema.vendor=Helm
     extra_files:
       - etc/chart_schema.yaml
       - etc/lintconf.yaml
