Fix CircleCI env var for tag
Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
       - run:
           name: Build
           command: |
-            if [[ -z "$CIRCLECI_TAG" ]]; then
+            if [[ -z "$CIRCLE_TAG" ]]; then
               echo "Building snapshot..."
               ./build.sh
             else
-              echo "Building release $CIRCLECI_TAG..."
+              echo "Building release $CIRCLE_TAG..."
               ./build.sh --release
             fi
 workflows:
