Revert "Update Gopkg.lock"
This reverts commit fcbfbdc9db7b3573fdec8eee1c3e172dcb880820.

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
               ./build.sh
             else
               echo "Building release $CIRCLE_TAG..."
+              echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin quay.io
               ./build.sh --release
             fi
 workflows:
