Re-write it in Go (#35)
* Re-write it in Go

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Fix loading config from home dir

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Print config

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Remove git gc test code

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Remove year in copyright header

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Add alias for lint-and-install

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Fix examples

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Remove OWNERS file

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Add docs generation

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Update CircleCI

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Update readme

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Document building and releasing

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>
Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Remove Makefile

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Hide doc-gen command

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Add support for Helm extra args

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Update tool dependencies

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Update Goreleaser

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Upgrade pip

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Update Gopkg.lock

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Add log messages

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Fix CircleCI env var for tag

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Add Docker login

Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

* Readme update for MacOS (#1)

* Add build.sh mac prerequisite

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  lint:
     docker:
       - image: koalaman/shellcheck-alpine
     steps:
@@ -8,7 +8,50 @@ jobs:
       - run:
           name: lint
           command: |
-            shellcheck -x lib/chartlib.sh
-            shellcheck -x chart_test.sh
-            shellcheck -x examples/docker-for-mac/my_test.sh
-            shellcheck -x examples/gke/my_test.sh
+            shellcheck -x build.sh
+            shellcheck -x tag.sh
+  build:
+    docker:
+      - image: golang:1.11.1-alpine3.8
+    working_directory: /go/src/github.com/helm/chart-testing
+    steps:
+      - setup_remote_docker
+      - run:
+          name: Install tools
+          command: |
+            apk add bash build-base ca-certificates curl docker git openssh
+            curl -SLO https://github.com/goreleaser/goreleaser/releases/download/v0.93.0/goreleaser_Linux_x86_64.tar.gz
+            mkdir -p /usr/local/goreleaser
+            tar -xzf goreleaser_Linux_x86_64.tar.gz -C /usr/local/goreleaser
+            ln -s /usr/local/goreleaser/goreleaser /usr/local/bin/goreleaser
+            rm -rf goreleaser_Linux_x86_64.tar.gz
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+      - checkout
+      - run:
+          name: Build
+          command: |
+            set -e
+            set -u
+
+            if [[ -z "${CIRCLE_TAG:-}" ]]; then
+              echo "Building snapshot..."
+              ./build.sh
+            else
+              echo "Building release $CIRCLE_TAG..."
+              echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin quay.io
+              ./build.sh --release
+            fi
+workflows:
+  version: 2
+  untagged-build:
+    jobs:
+      - lint
+      - build
+  tagged-build:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
