--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
 
-[*.{yml,yaml}]
+[*.{yml, yaml}]
 indent_size = 2
 
+[*.go]
+indent_style = tab
+
+[Makefile]
+indent_style = tab
