Add --helm-repo-extra-args flag to allow for passing args to helm when adding chart repos
Signed-off-by: Markus Maga <markus@nadilus.com>

--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -11,6 +11,8 @@ check-version-increment: true
 all: false
 chart-repos:
   - incubator=https://incubator
+helm-repo-extra-args:
+  - incubator=--username test
 chart-dirs:
   - stable
   - incubator
