--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -5,6 +5,8 @@ lint-conf: my-lint-conf.yaml
 chart-yaml-schema: my-chart-yaml-schema.yaml
 github-instance: https://github.com
 validate-maintainers: true
+validate-chart-schema: true
+validate-yaml: true
 check-version-increment: true
 all: false
 chart-repos:
