Test chart upgrades against previous version
Upgrade testing will be run if the --upgrade flag is set (default true)
and chart version increment does not indicate a breaking change
according to the SemVer 2.0 spec.

Any releases associated with previous chart versions which fail to roll
out or for which an initial `helm test` fails will be ignored.

Signed-off-by: Jacob LeGrone <git@jacob.work>

--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -19,5 +19,6 @@ chart-dirs:
 excluded-charts:
   - common
 helm-extra-args: --timeout 300
+upgrade: true
 namespace: default
 release-label: release
