Add gofmt to CircleCI
Signed-off-by: Gábor Lipták <gliptak@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,10 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
       - checkout
       - run:
+          name: gofmt
+          command: |
+            gofmt -w -s . && git diff --exit-code
+      - run:
           name: Build
           command: |
             set -e
