Fix random port usage and add retry handling
Signed-off-by: Reinhard Nägele <unguiculus@gmail.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,3 +30,7 @@
 [[constraint]]
     name = "gopkg.in/yaml.v2"
     version = "v2.2.1"
+
+[[constraint]]
+    name = "github.com/hashicorp/go-retryablehttp"
+    version = "v0.5.2"
