Fix goreleaser docker.binary deprecation notice
Reference: https://goreleaser.com/deprecations/#docker-binary

Signed-off-by: Jacob LeGrone <git@jacob.work>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,7 +32,8 @@ snapshot:
 dockers:
   - goos: linux
     goarch: amd64
-    binary: ct
+    binaries:
+      - ct
     skip_push: false
     dockerfile: Dockerfile
     image_templates:
