--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -20,5 +20,6 @@ excluded-charts:
   - common
 helm-extra-args: --timeout 300
 upgrade: true
+skip-missing-values: true
 namespace: default
 release-label: release
