Fix tests and some refactoring to accommodate for testing
Signed-off-by: Griffin Dunn <griffin.dunn@datadoghq.com>

--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -18,6 +18,9 @@ chart-dirs:
   - incubator
 excluded-charts:
   - common
+custom-manifest-processors:
+  - command: "test"
+    fail-fast: false
 helm-extra-args: --timeout 300
 upgrade: true
 skip-missing-values: true
