Revert FailFast flag, update processor
Signed-off-by: Griffin Dunn <griffin.dunn@datadoghq.com>

--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -19,8 +19,7 @@ chart-dirs:
 excluded-charts:
   - common
 custom-manifest-processors:
-  - command: "test"
-    fail-fast: false
+  - "test"
 helm-extra-args: --timeout 300
 upgrade: true
 skip-missing-values: true
