Add 'go mod download'
Signed-off-by: Reinhard Naegele <unguiculus@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Test
           command: |
+            go mod download
             ./e2e-kind.sh
   build:
     docker:
