--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,14 @@ jobs:
       - run:
           name: Install tools
           command: |
-            mkdir /home/circleci/.go_workspace/bin
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            curl -SsL https://golang.org/doc/install?download=go1.13.4.linux-amd64.tar.gz
+            tar -C /usr/local -xzf go1.13.4.linux-amd64.tar.gz
+            ln -s /usr/local/go/bin/go /usr/local/bin/go
+
             curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
             chmod +x ./kubectl
             sudo mv ./kubectl /usr/local/bin/kubectl
+
             curl https://raw.githubusercontent.com/helm/helm/master/scripts/get | bash
             curl -sSLo kind "https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-linux-amd64"
             chmod +x kind
