--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,11 @@ jobs:
       - run:
           name: Install tools
           command: |
+            mkdir /home/circleci/.go_workspace/bin
+
             curl -SsL https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz -o go1.13.4.linux-amd64.tar.gz
-            tar -C /usr/local -xzf go1.13.4.linux-amd64.tar.gz
-            ln -s /usr/local/go/bin/go /usr/local/bin/go
+            tar -xzf go1.13.4.linux-amd64.tar.gz
+            ln -s "$HOME/go/bin/go" "$HOME/.go_workspace/bin/go"
 
             curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
             chmod +x ./kubectl
