--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
     machine:
       enabled: true
       image: circleci/classic:201808-01
+    environment:
+      HELM_VERSION: v3.0.0-rc.2
     steps:
       - checkout
       - run:
@@ -30,7 +32,7 @@ jobs:
             chmod +x ./kubectl
             sudo mv ./kubectl /usr/local/bin/kubectl
 
-            curl https://raw.githubusercontent.com/helm/helm/master/scripts/get | bash
+            curl https://raw.githubusercontent.com/helm/helm/master/scripts/get | bash -s -- -v $HELM_VERSION
             curl -sSLo kind "https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-linux-amd64"
             chmod +x kind
             sudo mv kind /usr/local/bin/kind
