--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
             # We need to install Golang 1.13 because the CircleCI machine image has an outdated version.
             # We need to use a CircleCI machine in order to be able to run kind.
             curl -sSLO https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
-            tar -xzf go1.13.4.linux-amd64.tar.gz
-            sudo mv go/bin/go /usr/local/go/bin/go
+            sudo rm -r /usr/local/go
+            sudo tar -C /usr/local -xzf go1.13.4.linux-amd64.tar.gz
 
             curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
             chmod +x ./kubectl
