--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,37 +14,41 @@ jobs:
   test:
     machine:
       enabled: true
-    working_directory: /home/circleci/.go_workspace/src/github.com/helm/chart-testing
+      image: circleci/classic:201808-01
     steps:
+      - checkout
       - run:
           name: Install tools
           command: |
-            mkdir /home/circleci/.go_workspace/bin
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            # We need to install Golang 1.13 because the CircleCI machine image has an outdated version.
+            # We need to use a CircleCI machine in order to be able to run kind.
+            curl -sSLO https://dl.google.com/go/go1.13.4.linux-amd64.tar.gz
+            sudo rm -r /usr/local/go
+            sudo tar -C /usr/local -xzf go1.13.4.linux-amd64.tar.gz
+
             curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
             chmod +x ./kubectl
             sudo mv ./kubectl /usr/local/bin/kubectl
+
             curl https://raw.githubusercontent.com/helm/helm/master/scripts/get | bash
             curl -sSLo kind "https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-linux-amd64"
             chmod +x kind
             sudo mv kind /usr/local/bin/kind
-      - checkout
       - run:
           name: Test
           command: |
-            dep ensure -v
+            go mod download
             ./e2e-kind.sh
   build:
     docker:
-      - image: golang:1.12.4-alpine3.9
-    working_directory: /go/src/github.com/helm/chart-testing
+      - image: golang:1.13-alpine3.10
     steps:
       - setup_remote_docker
       - run:
           name: Install tools
           command: |
             apk add bash build-base ca-certificates curl docker git openssh
-            curl -SLO https://github.com/goreleaser/goreleaser/releases/download/v0.102.0/goreleaser_Linux_x86_64.tar.gz
+            curl -SLO https://github.com/goreleaser/goreleaser/releases/download/v0.120.5/goreleaser_Linux_x86_64.tar.gz
             mkdir -p /usr/local/goreleaser
             tar -xzf goreleaser_Linux_x86_64.tar.gz -C /usr/local/goreleaser
             ln -s /usr/local/goreleaser/goreleaser /usr/local/bin/goreleaser
