shellcheck docker-install.sh
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           name: lint
           command: |
             shellcheck -x build.sh
+            shellcheck -x docker-install.sh
             shellcheck -x tag.sh
             shellcheck -x e2e-kind.sh
   test:
