--- a/examples/kind/.circleci/config.yml
+++ b/examples/kind/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
 
   lint-charts:
     docker:
-      - image: quay.io/helmpack/chart-testing:v3.0.0
+      - image: quay.io/helmpack/chart-testing:v3.0.0-beta.1
     steps:
       - checkout
       - run:
