Fix statefulset test
Signed-off-by: Reinhard Naegele <unguiculus@gmail.com>

--- a/pkg/chart/test_charts/mutating-sfs-volumeclaim/templates/service.yaml
+++ b/pkg/chart/test_charts/mutating-sfs-volumeclaim/templates/service.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
