--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -20,6 +20,7 @@ excluded-charts:
   - common
 helm-extra-args: --timeout 300
 upgrade: true
+setup-script: "/path/to/script.sh"
 skip-missing-values: true
 namespace: default
 release-label: release
