need to pass githubtoken
Signed-off-by: David Karlsen <david@davidkarlsen.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,6 +49,8 @@ jobs:
           custom_tag: ${{ github.event.inputs.version }}
 
       - name: Build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -o nounset
           set -o pipefail
