Add arm64 builds (#351)
* Add arm64 builds

Signed-off-by: Tyler Auerbeck <tauerbec@redhat.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: ci
 on:
   push:
     branches:
-      - '*'
+      - 'main'
   pull_request:
     branches:
       - '*'
@@ -50,6 +50,12 @@ jobs:
           goimports -w -l .
           go mod tidy
           git diff --exit-code
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Build
         run: |
