--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -25,3 +25,8 @@ skip-missing-values: true
 namespace: default
 release-label: release
 exclude-deprecated: true
+evaluate-dotignore-files: true
+considered-dotignore-files:
+  - .ctignore
+  - .helmignore
+  - .customignore
