--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,8 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@f6164bd8c8acb4a71fb2791a8b6c4024ff038dab # v2.2.0
         with:
-          go-version: 1.18.x
+          go-version: '1.18'
+          check-latest: true
 
       - name: Install tools
         run: |
