--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,8 +40,10 @@ jobs:
       - name: Install syft
         uses: anchore/sbom-action/download-syft@b5042e9d19d8b32849779bfe17673ff84aec702d # v0.12.0
 
-      - name: Create k8s Kind Cluster
+      - name: Install k8s Kind
         uses: helm/kind-action@d08cf6ff1575077dee99962540d77ce91c62387d # v1.3.0
+        with:
+          install_only: true
 
       - name: Install tools
         run: |
