--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,7 +33,8 @@ builds:
         -X github.com/helm/chart-testing/v3/ct/cmd.BuildDate={{ .Date }}
 
 archives:
-  - format_overrides:
+  - rlcp: true
+    format_overrides:
       - goos: windows
         format: zip
     files:
